Minor bug fixes.  Include the rest of upod in the repository.